adding annotations for game and change gameMapper